--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,12 @@ h1 {
   font-size: 30px;
   color: #c30052;
 }
-h2,
+h2{
+  font-size: 25px;
+  color: #333;
+  text-align: center;
+  margin: auto;
+}
 p {
   margin: 0;
   padding: 0;
