--- a/css/styles.css
+++ b/css/styles.css
@@ -80,6 +80,16 @@ button {
   padding: 10px 20px;
 }
 
+.button--wind {
+  background: linear-gradient(90deg, #d53369 0%, #daae51 100%);
+}
+.button--ice {
+  background: linear-gradient(90deg, #0700b8 0%, #00ff88 100%)
+}
+.button--flame {
+  background: linear-gradient(90deg, #f8ff00 0%, #3ad59f 100%);
+}
+
 .wrapper {
   padding: 1rem 0;
   display: flex;
