--- a/css/styles.css
+++ b/css/styles.css
@@ -46,6 +46,17 @@ p {
   max-width: 32rem;
 }
 
+.card--wind {
+  background: linear-gradient(90deg, #d53369 0%, #daae51 100%);
+}
+.card--flame {
+  background: linear-gradient(90deg, #f8ff00 0%, #3ad59f 100%);
+}
+.card--ice {
+  background: linear-gradient(90deg, #0700b8 0%, #00ff88 100%)
+}
+
+
 
 .box {
   width: 100%;
